# wifi-scanner-rust

./: README.md
wifi-scanner-cli/: Cargo.toml
wifi-scanner-cli/src/: main.rs
wifi-scanner-desktop/: Cargo.toml  Dioxus.toml
wifi-scanner-desktop/src/: main.rs
wifi-scanner-web/: Cargo.toml  Dioxus.toml
wifi-scanner-web/src/: main.rs
