[package]
name = "wifi-scanner-web"
version = "0.1.0"
authors = ["Andres Giraldo <andresganc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
pretty_env_logger = "0.5.0"
tokio = { version = "1.40.0", features = ["full"] }
wifiscanner = "0.5.1"
futures-channel = "0.3.31"
futures = "0.3.31"
